--- a/notebooks/UQ_BNN_VI.ipynb
+++ b/notebooks/UQ_BNN_VI.ipynb
@@ -2,23 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../functions')\n",
     "\n",
+    "# Import necessary libraries\n",
     "import torch\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import time\n",
     "\n",
+    "# Import custom modules\n",
     "from data_processing import load_and_process_data\n",
-    "from models import DropoutModel, train_mcd, predict_mcd\n",
+    "from models import BayesianNeuralNetwork, train_bnn, predict_bnn\n",
     "from metrics import calculate_metrics, calculate_observed_confidence\n",
-    "from post_processing import create_errorbar_plot, plot_abs_error_vs_std, plot_std_histogram, plot_calibration_curve"
+    "from post_processing import create_errorbar_plot, plot_abs_error_vs_std, plot_std_histogram, plot_calibration_curve\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n"
    ]
   },
   {
@@ -27,53 +32,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Hyperparameters\n",
-    "BATCH_SIZE = 1\n",
-    "DROPOUT_RATE = 0.13\n",
-    "N_EPOCHS = 500\n",
-    "T = 300\n",
-    "LEARNING_RATE = 0.00011\n",
-    "num_zero_threshold = 3600\n",
-    "n_1, n_2, n_3 = 530, 602, 471\n",
-    "\n",
-    "# Device configuration\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "# Define hyperparameters\n",
+    "HYPERPARAMETERS = {\n",
+    "    'batch_size': 45,\n",
+    "    'hidden_layers': [656, 956, 87],\n",
+    "    'epochs': 650,\n",
+    "    'learning_rate': 0.00014,\n",
+    "    'weight_init_std': 0.11525,\n",
+    "    'log_std_init_mean': -3.0908,\n",
+    "    'log_std_init_std': 0.32564,\n",
+    "    'log_std_clamp': (-5.83775, 4.93684),\n",
+    "    'grad_clip_norm': 1.0,\n",
+    "    'n_samples_uncertainty': 500,\n",
+    "    'num_zero_threshold': 3600\n",
+    "}\n",
     "\n",
     "# Load and process data\n",
-    "file_path = \"../data/other_property/Tm.csv\"\n",
-    "X_count, Y = load_and_process_data(file_path, num_zero_threshold)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the data\n",
+    "file_path = \"../data/other_property/Tm.csv\"  # Update with your file path\n",
+    "X_count, Y = load_and_process_data(file_path, HYPERPARAMETERS['num_zero_threshold'])\n",
+    "\n",
+    "# Split data into training, validation, and test sets\n",
     "xtrain, xtemp, ytrain, ytemp = train_test_split(X_count, Y, test_size=0.2, random_state=11)\n",
     "xval, xtest, yval, ytest = train_test_split(xtemp, ytemp, test_size=0.5, random_state=42)\n",
     "\n",
-    "# Create DataLoaders\n",
-    "def create_dataloader(x, y, batch_size):\n",
-    "    tensor_x = torch.FloatTensor(x.values).to(device)\n",
-    "    tensor_y = torch.FloatTensor(y).unsqueeze(1).to(device)\n",
-    "    dataset = torch.utils.data.TensorDataset(tensor_x, tensor_y)\n",
-    "    return torch.utils.data.DataLoader(dataset=dataset, batch_size=batch_size, shuffle=False)\n",
+    "# Convert data to PyTorch tensors and move to device\n",
+    "xtrain_tensor = torch.tensor(xtrain.values).float().to(device)\n",
+    "ytrain_tensor = torch.tensor(ytrain).float().to(device)\n",
+    "xval_tensor = torch.tensor(xval.values).float().to(device)\n",
+    "yval_tensor = torch.tensor(yval).float().to(device)\n",
+    "xtest_tensor = torch.tensor(xtest.values).float().to(device)\n",
+    "ytest_tensor = torch.tensor(ytest).float().to(device)\n",
     "\n",
-    "train_loader = create_dataloader(xtrain, ytrain, BATCH_SIZE)\n",
-    "val_loader = create_dataloader(xval, yval, BATCH_SIZE)\n",
-    "test_loader = create_dataloader(xtest, ytest, BATCH_SIZE)\n",
+    "# Create DataLoader for training data\n",
+    "train_data = TensorDataset(xtrain_tensor, ytrain_tensor)\n",
+    "train_loader = DataLoader(dataset=train_data, batch_size=HYPERPARAMETERS['batch_size'], shuffle=True)\n",
     "\n",
-    "# Initialize model\n",
-    "model = DropoutModel(xtrain.shape[1], n_1, n_2, n_3, DROPOUT_RATE).to(device)\n",
+    "# Initialize and train the BNN model\n",
+    "model = BayesianNeuralNetwork(\n",
+    "    n_features=xtrain.shape[1],\n",
+    "    hidden_layers=HYPERPARAMETERS['hidden_layers'],\n",
+    "    weight_init_std=HYPERPARAMETERS['weight_init_std'],\n",
+    "    log_std_init_mean=HYPERPARAMETERS['log_std_init_mean'],\n",
+    "    log_std_init_std=HYPERPARAMETERS['log_std_init_std'],\n",
+    "    log_std_clamp=HYPERPARAMETERS['log_std_clamp']\n",
+    ")\n",
     "\n",
     "# Train the model\n",
     "start_time = time.time()\n",
-    "train_mcd(model, train_loader, N_EPOCHS, LEARNING_RATE)\n",
+    "\n",
+    "model = model.to(device)\n",
+    "train_bnn(model, train_loader, HYPERPARAMETERS['epochs'], HYPERPARAMETERS['learning_rate'], HYPERPARAMETERS['grad_clip_norm'])\n",
+    "\n",
     "end_time = time.time()\n",
-    "print(f\"Training took {end_time - start_time:.2f} seconds.\")"
+    "\n",
+    "# Print elapsed time\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"Training took {elapsed_time:.2f} seconds.\")"
    ]
   },
   {
@@ -82,17 +96,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions\n",
-    "mean_train, std_train = predict_mcd(model, train_loader, T)\n",
-    "mean_test, std_test = predict_mcd(model, test_loader, T)\n",
-    "# Ensure predictions and standard deviations are 1D arrays\n",
-    "mean_train = mean_train.flatten()\n",
-    "std_train = std_train.flatten()\n",
-    "mean_test = mean_test.flatten()\n",
-    "std_test = std_test.flatten()\n",
+    "\n",
+    "# Make predictions with uncertainty on training and test data\n",
+    "mean_train, std_train = predict_bnn(model, xtrain_tensor.to(device), HYPERPARAMETERS['n_samples_uncertainty'])\n",
+    "mean_test, std_test = predict_bnn(model, xtest_tensor.to(device), HYPERPARAMETERS['n_samples_uncertainty'])\n",
+    "\n",
+    "# Convert predictions to numpy for metric calculation\n",
+    "mean_train = mean_train.cpu().numpy()\n",
+    "std_train = std_train.cpu().numpy()\n",
+    "mean_test = mean_test.cpu().numpy()\n",
+    "std_test = std_test.cpu().numpy()\n",
+    "\n",
+    "# Calibration curve\n",
+    "confidence_levels = np.arange(0, 1.05, 0.05)\n",
     "\n",
     "# Calculate metrics\n",
-    "confidence_levels = np.arange(0, 1.05, 0.05)\n",
     "train_metrics = calculate_metrics(ytrain, mean_train, std_train, confidence_levels)\n",
     "test_metrics = calculate_metrics(ytest, mean_test, std_test, confidence_levels)\n",
     "\n",
@@ -177,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
