--- a/notebooks/UQ_MVE.ipynb
+++ b/notebooks/UQ_MVE.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../UQ_multiple_property_github/utils')\n",
+    "sys.path.append('../functions')\n",
     "\n",
     "import torch\n",
     "import numpy as np\n",
@@ -18,8 +18,15 @@
     "from data_processing import load_and_process_data\n",
     "from models import MVE_Model, train_mve, predict_mve\n",
     "from metrics import calculate_metrics, calculate_observed_confidence\n",
-    "from post_processing import create_errorbar_plot, plot_abs_error_vs_std, plot_std_histogram, plot_calibration_curve\n",
-    "\n",
+    "from post_processing import create_errorbar_plot, plot_abs_error_vs_std, plot_std_histogram, plot_calibration_curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Hyperparameters\n",
     "BATCH_SIZE = 2\n",
     "EPOCHS = 500\n",
@@ -33,6 +40,83 @@
     "# Load and process data\n",
     "file_path = \"../data/other_property/Tm.csv\"\n",
     "X_count, Y = load_and_process_data(file_path, num_zero_threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data\n",
+    "xtrain, xtemp, ytrain, ytemp = train_test_split(X_count, Y, test_size=0.2, random_state=11)\n",
+    "xval, xtest, yval, ytest = train_test_split(xtemp, ytemp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Create DataLoaders\n",
+    "def create_dataloader(x, y, batch_size):\n",
+    "    tensor_x = torch.FloatTensor(x.values).to(device)\n",
+    "    tensor_y = torch.FloatTensor(y).to(device)\n",
+    "    dataset = torch.utils.data.TensorDataset(tensor_x, tensor_y)\n",
+    "    return torch.utils.data.DataLoader(dataset=dataset, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "train_loader = create_dataloader(xtrain, ytrain, BATCH_SIZE)\n",
+    "val_loader = create_dataloader(xval, yval, BATCH_SIZE)\n",
+    "test_loader = create_dataloader(xtest, ytest, BATCH_SIZE)\n",
+    "\n",
+    "# Initialize model\n",
+    "model = MVE_Model(xtrain.shape[1], HIDDEN_LAYERS).to(device)\n",
+    "\n",
+    "# Train the model\n",
+    "start_time = time.time()\n",
+    "train_mve(model, train_loader, EPOCHS, LEARNING_RATE)\n",
+    "end_time = time.time()\n",
+    "print(f\"Training took {end_time - start_time:.2f} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions with uncertainty on training and test data\n",
+    "pred_train = model.pred_dist(xtrain)\n",
+    "pred_test = model.pred_dist(xtest)\n",
+    "\n",
+    "# Extract mean and std values\n",
+    "mean_train = pred_train.loc\n",
+    "std_train = pred_train.scale\n",
+    "\n",
+    "mean_test = pred_test.loc\n",
+    "std_test = pred_test.scale\n",
+    "\n",
+    "# Ensure all arrays are properly shaped\n",
+    "ytrain_np = ytrain.flatten()\n",
+    "ytest_np = ytest.flatten()\n",
+    "mean_train = mean_train.flatten()\n",
+    "mean_test = mean_test.flatten()\n",
+    "std_train = std_train.flatten()\n",
+    "std_test = std_test.flatten()\n",
+    "\n",
+    "# Calibration curve\n",
+    "confidence_levels = np.arange(0, 1.05, 0.05)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "train_metrics = calculate_metrics(ytrain_np, mean_train, std_train, confidence_levels)\n",
+    "test_metrics = calculate_metrics(ytest_np, mean_test, std_test, confidence_levels)\n",
+    "\n",
+    "# Create a DataFrame to store the metrics\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'Dataset': ['Training', 'Test'],\n",
+    "    'MAE': [train_metrics['MAE'], test_metrics['MAE']],\n",
+    "    'RMSE': [train_metrics['RMSE'], test_metrics['RMSE']],\n",
+    "    'R2': [train_metrics['R2'], test_metrics['R2']],\n",
+    "    'Spearman': [train_metrics['Spearman'], test_metrics['Spearman']],\n",
+    "    'Calibration Area': [train_metrics['Calibration Area'], test_metrics['Calibration Area']]\n",
+    "})\n",
+    "\n",
+    "# Print the DataFrame\n",
+    "print(metrics_df)"
    ]
   },
   {
