--- a/notebooks/UQ_ensemble.ipynb
+++ b/notebooks/UQ_ensemble.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../utils')\n",
+    "sys.path.append('../functions')\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -23,6 +23,16 @@
     "from metrics import calculate_metrics, calculate_observed_confidence\n",
     "from post_processing import create_errorbar_plot, plot_abs_error_vs_std, plot_std_histogram, plot_calibration_curve\n",
     "\n",
+    "# Device configuration\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Hyperparameters\n",
     "BATCH_SIZE = 4\n",
     "EPOCHS = 250\n",
@@ -30,9 +40,6 @@
     "NEURONS = (256, 512, 256)\n",
     "LEARNING_RATE = 0.0003\n",
     "num_zero_threshold = 3600\n",
-    "\n",
-    "# Device configuration\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Load and process data\n",
     "file_path = \"../data/other_property/Tm.csv\"\n",
