--- a/notebooks/UQ_NGBoost.ipynb
+++ b/notebooks/UQ_NGBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import time\n",
-    "\n",
+    "from ngboost import NGBRegressor\n",
+    "from ngboost.distns import Normal\n",
     "# Import custom modules\n",
     "from data_processing import load_and_process_data\n",
     "from models import train_gpr, predict_gpr\n",
@@ -28,11 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define hyperparameters\n",
-    "KERNEL_VARIANCE = 1\n",
-    "KERNEL_LENGTHSCALE = 1\n",
-    "WHITE_KERNEL_VARIANCE = 1\n",
-    "MAX_ITERATIONS = 500\n",
     "num_zero_threshold = 3600\n",
     "\n",
     "# Load and process data\n",
@@ -49,18 +45,32 @@
     "\n",
     "# Reshape ytrain and ytest if they are not already 2D arrays\n",
     "ytrain_np = ytrain.reshape(-1, 1) if len(ytrain.shape) == 1 else ytrain\n",
-    "ytest_np = ytest.reshape(-1, 1) if len(ytest.shape) == 1 else ytest\n",
-    "\n",
-    "# Train the model\n",
+    "ytest_np = ytest.reshape(-1, 1) if len(ytest.shape) == 1 else ytest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "start_time = time.time()\n",
     "\n",
-    "# Train the GPR model\n",
-    "model = train_gpr(xtrain_np, ytrain_np, KERNEL_VARIANCE, KERNEL_LENGTHSCALE, WHITE_KERNEL_VARIANCE, MAX_ITERATIONS)\n",
-    "\n",
-    "\n",
-    "end_time = time.time()\n",
-    "\n",
-    "# Print elapsed time\n",
+    "model = NGBRegressor(\n",
+    "    Dist=Normal, \n",
+    "    n_estimators=4000, \n",
+    "    learning_rate=0.1, \n",
+    "    minibatch_frac=0.5,\n",
+    "    verbose=1,\n",
+    "    col_sample=0.5,\n",
+    "    random_state=42, \n",
+    "    natural_gradient=True\n",
+    "    )\n",
+    "    \n",
+    "# Train model\n",
+    "model.fit(xtrain, ytrain)\n",
+    "    \n",
+    "end_time = time.time() \n",
     "elapsed_time = end_time - start_time\n",
     "print(f\"Training took {elapsed_time:.2f} seconds.\")"
    ]
@@ -71,10 +81,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Make predictions with uncertainty on training and test data\n",
-    "mean_train, std_train = predict_gpr(model, xtrain_np)\n",
-    "mean_test, std_test = predict_gpr(model, xtest_np)\n",
+    "pred_train = model.pred_dist(xtrain)\n",
+    "pred_test = model.pred_dist(xtest)\n",
+    "\n",
+    "# Extract mean and std values\n",
+    "mean_train = pred_train.loc\n",
+    "std_train = pred_train.scale\n",
+    "\n",
+    "mean_test = pred_test.loc\n",
+    "std_test = pred_test.scale\n",
+    "\n",
+    "# Ensure all arrays are properly shaped\n",
+    "ytrain_np = ytrain.flatten()\n",
+    "ytest_np = ytest.flatten()\n",
+    "mean_train = mean_train.flatten()\n",
+    "mean_test = mean_test.flatten()\n",
+    "std_train = std_train.flatten()\n",
+    "std_test = std_test.flatten()\n",
     "\n",
     "# Calibration curve\n",
     "confidence_levels = np.arange(0, 1.05, 0.05)\n",
@@ -150,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "active_learning",
+   "display_name": "UQ",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
