--- a/notebooks/UQ_QR.ipynb
+++ b/notebooks/UQ_QR.ipynb
@@ -2,21 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../functions')\n",
     "\n",
+    "# Import necessary libraries\n",
     "import torch\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import time\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error\n",
     "\n",
+    "# Import custom modules\n",
     "from data_processing import load_and_process_data\n",
-    "from models import DropoutModel, train_mcd, predict_mcd\n",
+    "from models import QR_Model, quantile_loss, predictions_QR\n",
     "from metrics import calculate_metrics, calculate_observed_confidence\n",
     "from post_processing import create_errorbar_plot, plot_abs_error_vs_std, plot_std_histogram, plot_calibration_curve"
    ]
@@ -27,15 +31,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Hyperparameters\n",
-    "BATCH_SIZE = 1\n",
-    "DROPOUT_RATE = 0.13\n",
-    "N_EPOCHS = 500\n",
-    "T = 300\n",
-    "LEARNING_RATE = 0.00011\n",
+    "BATCH_SIZE = 32\n",
+    "EPOCHS = 800\n",
+    "HIDDEN_LAYERS = [1024, 256, 128]\n",
+    "LEARNING_RATE = 0.000015\n",
+    "QUANTILES = [0.1, 0.5, 0.9]  # We'll use 0.5 as median (our prediction) and 0.1, 0.9 to create uncertainty bounds\n",
     "num_zero_threshold = 3600\n",
-    "n_1, n_2, n_3 = 530, 602, 471\n",
     "\n",
     "# Device configuration\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,22 +60,52 @@
     "# Create DataLoaders\n",
     "def create_dataloader(x, y, batch_size):\n",
     "    tensor_x = torch.FloatTensor(x.values).to(device)\n",
-    "    tensor_y = torch.FloatTensor(y).unsqueeze(1).to(device)\n",
+    "    tensor_y = torch.FloatTensor(y).to(device)\n",
     "    dataset = torch.utils.data.TensorDataset(tensor_x, tensor_y)\n",
     "    return torch.utils.data.DataLoader(dataset=dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "train_loader = create_dataloader(xtrain, ytrain, BATCH_SIZE)\n",
     "val_loader = create_dataloader(xval, yval, BATCH_SIZE)\n",
-    "test_loader = create_dataloader(xtest, ytest, BATCH_SIZE)\n",
-    "\n",
+    "test_loader = create_dataloader(xtest, ytest, BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialize model\n",
-    "model = DropoutModel(xtrain.shape[1], n_1, n_2, n_3, DROPOUT_RATE).to(device)\n",
+    "input_shape = xtrain.shape[1]\n",
+    "model = QR_Model(input_shape, QUANTILES).to(device)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "\n",
-    "# Train the model\n",
+    "# Training loop\n",
     "start_time = time.time()\n",
-    "train_mcd(model, train_loader, N_EPOCHS, LEARNING_RATE)\n",
-    "end_time = time.time()\n",
-    "print(f\"Training took {end_time - start_time:.2f} seconds.\")"
+    "\n",
+    "for epoch in range(EPOCHS):\n",
+    "    model.train()\n",
+    "    epoch_loss = 0\n",
+    "    \n",
+    "    for batch_x, batch_y in train_loader:\n",
+    "        batch_x, batch_y = batch_x.to(device), batch_y.to(device)\n",
+    "        \n",
+    "        # Forward pass\n",
+    "        predictions = model(batch_x)\n",
+    "        loss = quantile_loss(predictions, batch_y, QUANTILES)\n",
+    "        \n",
+    "        # Backward and optimize\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        epoch_loss += loss.item()\n",
+    "    \n",
+    "    if (epoch + 1) % 10 == 0:\n",
+    "        print(f'Epoch {epoch + 1}, Loss: {epoch_loss:.4f}')\n",
+    "\n",
+    "total_time = time.time() - start_time\n",
+    "print(f'Training completed in {total_time:.2f} seconds')"
    ]
   },
   {
@@ -83,13 +115,8 @@
    "outputs": [],
    "source": [
     "# Make predictions\n",
-    "mean_train, std_train = predict_mcd(model, train_loader, T)\n",
-    "mean_test, std_test = predict_mcd(model, test_loader, T)\n",
-    "# Ensure predictions and standard deviations are 1D arrays\n",
-    "mean_train = mean_train.flatten()\n",
-    "std_train = std_train.flatten()\n",
-    "mean_test = mean_test.flatten()\n",
-    "std_test = std_test.flatten()\n",
+    "mean_train, std_train = predictions_QR(model, train_loader)\n",
+    "mean_test, std_test = predictions_QR(model, test_loader)\n",
     "\n",
     "# Calculate metrics\n",
     "confidence_levels = np.arange(0, 1.05, 0.05)\n",
@@ -163,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "active_learning",
+   "display_name": "UQ",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
